--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           cache-name: cache-site-build
         with:
-          path: ./data/editions
+          path: ./data/verticals
           key:
             build-${{ env.cache-name }}-${{ hashFiles('**/fetch-data.sh') }}
           restore-keys: |
@@ -22,45 +22,6 @@ jobs:
             build-
       - name: Fetch data
         run: ./shellscripts/fetch_data.sh
-
-  typesense_index:
-    needs: [fetch_data]
-    name: Build Typesense Index
-    runs-on: ubuntu-latest
-    env:
-      TYPESENSE_HOST: typesense.acdh-dev.oeaw.ac.at
-      TYPESENSE_PORT: 443
-      TYPESENSE_PROTOCOL: https
-      TYPESENSE_API_KEY: ${{secrets.TYPESENSE_API_KEY}}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Cache
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-site-build
-        with:
-          path: ./data/editions
-          key:
-            build-${{ env.cache-name }}-${{ hashFiles('**/fetch-data.sh') }}
-          restore-keys: |
-            build-${{ env.cache-name }}-
-            build-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pipenv"
-      - name: Install dependencies
-        run: |
-          python --version
-          python -m pip install pipenv
-          pipenv install
-      - name: Build gestrich index data.jsonl
-        run: pipenv run python typesense/index_7jaehriger_krieg.py
-      - name: Index Gestrich and Transkribus Exports
-        run: pipenv run python typesense/build_index.py
-      - name: Index Digitarium
-        run: pipenv run python typesense/index_digitarium.py
   
   noske_index:
     needs: [fetch_data]
@@ -74,35 +35,18 @@ jobs:
           cache-name: cache-site-build
         with:
           path: |
-            ./data/editions
+            ./data/verticals
           key:
             build-${{ env.cache-name }}-${{ hashFiles('**/fetch-data.sh') }}
           restore-keys: |
             build-${{ env.cache-name }}-
             build-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-          cache: "pipenv"
-      - name: Install dependencies
-        run: |
-          python --version
-          python -m pip install pipenv
-          pipenv install
-      - name: Build verticals
-        run: |
-          pipenv run python noske/mk_verticals.py
-      # - name: Commit data
-      #   uses: stefanzweifel/git-auto-commit-action@v4
-      #   with:
-      #     commit_message: Verticals/Created
       - name: Create tags based on git data
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/wiener-diarium/wr-indexer/diarium-noske
+            ghcr.io/flugblatter/flugblaetter_nosketch/flugblaetter
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -130,11 +74,11 @@ jobs:
   
   _3:
     needs: [noske_index]
-    uses: wiener-diarium/gl-autodevops-minimal-port/.github/workflows/deploy.yml@main
+    uses: flugblatter/gl-autodevops-minimal-port/.github/workflows/deploy.yml@main
     secrets: inherit
     with:
-      DOCKER_TAG: "ghcr.io/wiener-diarium/wr-indexer/diarium-noske"
-      APP_NAME: "wiener-diarium"
+      DOCKER_TAG: "ghcr.io/flugblatter/flugblaetter_nosketch/flugblaetter"
+      APP_NAME: "flugblaetter"
       APP_ROOT: "/"
       POSTGRES_ENABLED: false
       environment: "${{ github.ref_name }}"
