--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -29,6 +29,7 @@ jobs:
           git config --global user.email "${GH_USERMAIL}"
           git config --global user.name "${GH_USERNAME}"
           git config --global credential.helper cache
+          rm -rf ./data/*
           git clone https://${GITHUB_ACCESS_TOKEN_NAME}:${GITHUB_ACCESS_TOKEN}@github.com/Flugblatter/flugblaetter_data_ouput.git data
           ls -la cloned_repo
   noske_index:
