--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -26,10 +26,10 @@ jobs:
             build-
       - name: Fetch data
         run: |
+          mkdir data
           git config --global user.email "${GH_USERMAIL}"
           git config --global user.name "${GH_USERNAME}"
           git config --global credential.helper cache
-          rm -rf ./data/*
           git clone https://${GITHUB_ACCESS_TOKEN_NAME}:${GITHUB_ACCESS_TOKEN}@github.com/Flugblatter/flugblaetter_data_ouput.git data
           ls -la cloned_repo
   noske_index:
