--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -26,7 +26,7 @@ jobs:
             build-
       - name: Fetch data
         run: |
-          if [[ ! -d data ]] then; mkdir data; fi
+          if [[ ! -d data ]]; then mkdir data; fi
           git config --global user.email "${GH_USERMAIL}"
           git config --global user.name "${GH_USERNAME}"
           git config --global credential.helper cache
