--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -31,7 +31,7 @@ jobs:
           # git config --global user.name "${GH_USERNAME}"
           # git config --global credential.helper cache
           # git clone https://${GITHUB_ACCESS_TOKEN_NAME}:${GITHUB_ACCESS_TOKEN}@github.com/Flugblatter/flugblaetter_data_ouput.git data
-          cp -r dummydata/* data/
+          cp -r dummydata/verticals data/
   noske_index:
     needs: [fetch_data]
     name: Build Noske Index
