--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -13,17 +13,17 @@ jobs:
       GH_USERMAIL: ${{ secrets.GH_USERMAIL }}
     steps:
       - uses: actions/checkout@v4
-      - name: Cache the site
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-site-build
-        with:
-          path: ./data/verticals
-          key:
-            build-${{ env.cache-name }}-${{ hashFiles('shellscripts/build_container.sh') }}
-          restore-keys: |
-            build-${{ env.cache-name }}-
-            build-
+      # - name: Cache the site
+      #   uses: actions/cache@v4
+      #   env:
+      #     cache-name: cache-site-build
+      #   with:
+      #     path: ./data/verticals
+      #     key:
+      #       build-${{ env.cache-name }}-${{ hashFiles('shellscripts/build_container.sh') }}
+      #     restore-keys: |
+      #       build-${{ env.cache-name }}-
+      #       build-
       - name: Fetch data
         run: |
           if [[ ! -d data ]]; then mkdir data; fi
@@ -38,18 +38,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Cache editions
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-site-build
-        with:
-          path: |
-            ./data/verticals
-          key:
-            build-${{ env.cache-name }}-${{ hashFiles('shellscripts/build_container.sh') }}
-          restore-keys: |
-            build-${{ env.cache-name }}-
-            build-
+      # - name: Use Cache editions
+      #   uses: actions/cache@v4
+      #   env:
+      #     cache-name: cache-site-build
+      #   with:
+      #     path: |
+      #       ./data/verticals
+      #     key:
+      #       build-${{ env.cache-name }}-${{ hashFiles('shellscripts/build_container.sh') }}
+      #     restore-keys: |
+      #       build-${{ env.cache-name }}-
+      #       build-
       - name: Create tags based on git data
         id: meta
         uses: docker/metadata-action@v5
