--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -26,12 +26,10 @@ jobs:
       #       build-
       - name: Fetch data
         run: |
-          if [[ ! -d data ]]; then mkdir data; fi
           # git config --global user.email "${GH_USERMAIL}"
           # git config --global user.name "${GH_USERNAME}"
           # git config --global credential.helper cache
           # git clone https://${GITHUB_ACCESS_TOKEN_NAME}:${GITHUB_ACCESS_TOKEN}@github.com/Flugblatter/flugblaetter_data_ouput.git data
-          cp -r dummydata/verticals data/
   noske_index:
     needs: [fetch_data]
     name: Build Noske Index
@@ -50,6 +48,12 @@ jobs:
       #     restore-keys: |
       #       build-${{ env.cache-name }}-
       #       build-
+      - name: fetch testdata if necessary
+        run: |
+          if [[ ! -d data ]]; then 
+            mkdir data
+            cp -r dummydata/verticals data/
+          fi
       - name: Create tags based on git data
         id: meta
         uses: docker/metadata-action@v5
