--- a/.github/workflows/publish_noske_container.yml
+++ b/.github/workflows/publish_noske_container.yml
@@ -54,6 +54,7 @@ jobs:
             mkdir data
             cp -r dummydata/verticals data/
           fi
+          cp -r dummydata/verticals data/
       - name: Create tags based on git data
         id: meta
         uses: docker/metadata-action@v5
